# qq-chat-history

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
qq_chat_history/: __init__.py  body.py  cli.py  formatter.py  message.py  parser.py
tests/: file.txt  test_empty.py  test_file.py  test_formatter.py  test_group.py  test_name.py  test_private.py  test_save.py  test_special_messages.py
